--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - POSTGRES_PASSWORD=secret
       - POSTGRES_MULTIPLE_DATABASES=synapse,keycloak
     healthcheck:
-      test: [ "CMD-SHELL", "sh -c 'pg_isready -U root -d keycloak'" ]
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U root -d keycloak'"]
       interval: 10s
       timeout: 3s
       retries: 3
@@ -44,9 +44,13 @@ services:
 
   keycloak-health:
     image: curlimages/curl
-    command: [ "sh", "-c", "while true; do sleep 1; done" ]
+    command: ["sh", "-c", "while true; do sleep 1; done"]
     healthcheck:
-      test: [ "CMD-SHELL", "curl --head -fsS --insecure --http1.1  https://keycloak:8443/health/ready" ]
+      test:
+        [
+          "CMD-SHELL",
+          "curl --head -fsS --insecure --http1.1  https://keycloak:8443/health/ready",
+        ]
       interval: 15s
       timeout: 30s
       retries: 5
