--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = eimis_white_list_module
 description = "A synapse module used by EIMIS to filter users"
 long_description = file: README.md
 long_description_content_type = text/markdown
-version = 0.1.0
+version = 0.1.1
 
 classifiers =
   License :: OSI Approved :: Apache Software License
@@ -17,15 +17,15 @@ install_requires =
 [options.extras_require]
 dev =
   # for tests
-  matrix-synapse
-  tox
-  aiounittest
+  matrix-synapse == 1.121.1
+  tox == 4.23.2 
+  aiounittest == 1.4.2
   # for type checking
-  mypy == 0.910
+  mypy == 1.14.1
   # for linting
-  black == 22.3.0
-  flake8 == 4.0.1
-  isort == 5.9.3
+  black == 24.10.0
+  flake8 == 7.1.1
+  isort == 5.13.2
 
 
 [flake8]
